--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Jakub Dąbrowski - Portfolio Manual Tester | Kielce</title>
 		<meta charset="utf-8" />
 		<meta name="description" content="Cześć, jestem Kuba. Zobacz nad jakibi projektami pracowałem. Szukam stażu jako Manual tester. Sprawdź moje portfolio." />
+		<meta name="google-site-verification" content="ZftnQmCWTqDtDI6O2ebp7_P2WBNOrDMuaelrXEL-LmY" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
