--- a/index.html
+++ b/index.html
@@ -6,15 +6,6 @@
 -->
 <html>
 	<head>
-		<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-M5KFC3S0E4"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-M5KFC3S0E4');
-</script>
 		<title>Jakub Dąbrowski - Portfolio Manual Tester | Kielce</title>
 		<meta charset="utf-8" />
 		<meta name="description" content="Cześć, jestem Kuba. Zobacz nad jakibi projektami pracowałem. Szukam stażu jako Manual tester. Sprawdź moje portfolio." />
@@ -34,11 +25,11 @@
 						<p>Manual Tester &nbsp;&bull;&nbsp; Portfolio &nbsp;&bull;&nbsp; </p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<meta property="og:title" content="Jakub Dąbrowski - Moje Portfolio" />
+						<meta property="og:description" content="Zobacz moje projekty programistyczne i CV." />
+						<meta property="og:image" content="https://github.com/Pisuuu" />
+						<meta property="og:url" content="https://twojanazwa.github.io/" />
+						<meta property="og:type" content="website" />
 							</ul>
 						</nav>
 					</header>
